# Course_work-3

./: pyproject.toml
src/: main.py  utils.py
test/: conftest.py  test_utils.py
