[tool.poetry]
name = "cw-3-2"
version = "0.1.0"
description = ""
authors = ["Сергей Арефьев <<Simpson6515@yandex.ru>"]
readme = "README.md"
packages = [{include = "cw_3"}]

[tool.poetry.dependencies]
python = "^3.11"
path = "^16.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
